--- a/index.html
+++ b/index.html
@@ -88,6 +88,15 @@
         sit amet, consectetur adipiscing elit. Nidoking Lorem ipsum</p>
         <span class='expandButton'></span>
       </div>
+
+      <div class ="article">
+        <h2> Finally MVP</h2>
+
+        <p> That was really stupid</p>
+
+        <p> I imported javascript files into the less.css file and it threw everything whack.</p>
+      </div>
+
       <div class="article">
         <h2>Professional Software Development in 2018</h2>
         <p class="date">Nov 7th, 2017</p>
